sonar-qube/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sonar-qube-vs
  # namespace: tools
spec:
  gateways:
    - sonar-qube-gateway
  hosts:
    - "sonar.rpolnx.local"
  http:
    - name: "sonar-qube-deployment"
      route:
        - destination:
            host: sonarqube-sonarqube
            port:
              number: 9000
